implemented translation collision prefixes